[REFACTOR] email - centralize constants into specialized classes, enhance service architecture and fix social links in footer